--- a/packages/example/src/theme/theme-variables.css
+++ b/packages/example/src/theme/theme-variables.css
@@ -175,57 +175,30 @@
   @media (prefers-color-scheme: dark) {
 
     /* Dark mode */
-    --black-10: #FFFFFF;
-    --black-11: #FFFFFF;
-    --black-12: #FFFFFF;
-    --black-1: #FFFFFF;
-    --black-2: #FFFFFF;
-    --black-3: #FFFFFF;
-    --black-4: #FFFFFF;
-    --black-5: #FFFFFF;
-    --black-6: #FFFFFF;
-    --black-7: #FFFFFF;
-    --black-8: #FFFFFF;
-    --black-9: #FFFFFF;
-    --black-a10: #00000079;
-    --black-a11: #00000090;
-    --black-a12: #000000E8;
-    --black-a1: #00000003;
-    --black-a2: #00000006;
-    --black-a3: #0000000B;
-    --black-a4: #00000012;
-    --black-a5: #00000016;
-    --black-a6: #0000001D;
-    --black-a7: #00000023;
-    --black-a8: #00000038;
-    --black-a9: #0000006F;
-    --error-10: #EC5E41;
-    --error-11: #F16A50;
-    --error-12: #FEEFEC;
-    --error-1: #1D1412;
-    --error-2: #2A1410;
-    --error-3: #3B1813;
-    --error-4: #481A14;
-    --error-5: #541C15;
-    --error-6: #652016;
-    --error-7: #7F2315;
-    --error-8: #A42A12;
-    --error-9: #E54D2E;
-    --error-a10: #FF6445E9;
-    --error-a11: #FF7054EF;
-    --error-a12: #FFF3F0F9;
-    --error-a1: #00000000;
-    --error-a2: #FD15000E;
-    --error-a3: #FF301921;
-    --error-a4: #FE331C30;
-    --error-a5: #FE351E3E;
-    --error-a6: #FF391E51;
-    --error-a7: #FF37196E;
-    --error-a8: #FF3A1298;
-    --error-a9: #FF5431E1;
-    --grey-10: #787F85;
-    --grey-11: #9BA1A6;
-    --grey-12: #ECEDEE;
+    --primary-1: #07131D;
+    --primary-2: #061724;
+    --primary-3: #071E30;
+    --primary-4: #07253B;
+    --primary-5: #072A44;
+    --primary-6: #063150;
+    --primary-7: #043B63;
+    --primary-8: #00487D;
+    --primary-9: #0573C2;
+    --primary-10: #0077CC;
+    --primary-11: #419CDD;
+    --primary-12: #E1EFFA;
+    --primary-a1: #00000000;
+    --primary-a2: #0094FF07;
+    --primary-a3: #0795FC15;
+    --primary-a4: #0797FF21;
+    --primary-a5: #0797FE2C;
+    --primary-a6: #0295FF39;
+    --primary-a7: #0094FF4F;
+    --primary-a8: #0094FF6C;
+    --primary-a9: #0496FFBA;
+    --primary-a10: #0094FFC5;
+    --primary-a11: #0094FED2;
+    --primary-a12: #E6F4FFF9;
     --grey-1: #151718;
     --grey-2: #1A1D1E;
     --grey-3: #202425;
@@ -235,9 +208,9 @@
     --grey-7: #3A3F42;
     --grey-8: #4C5155;
     --grey-9: #697177;
-    --grey-a10: #E7F3FF78;
-    --grey-a11: #EFF7FF9C;
-    --grey-a12: #FDFEFFEC;
+    --grey-10: #787F85;
+    --grey-11: #9BA1A6;
+    --grey-12: #ECEDEE;
     --grey-a1: #00000000;
     --grey-a2: #D5FEFF06;
     --grey-a3: #D6FBFC0E;
@@ -247,57 +220,9 @@
     --grey-a7: #E0F3FF2E;
     --grey-a8: #E5F2FE43;
     --grey-a9: #E1F1FF69;
-    --info-10: #10B3A3;
-    --info-11: #0AC5B3;
-    --info-12: #E1FAF4;
-    --info-1: #091915;
-    --info-2: #04201B;
-    --info-3: #062923;
-    --info-4: #07312B;
-    --info-5: #083932;
-    --info-6: #09443C;
-    --info-7: #0B544A;
-    --info-8: #0C6D62;
-    --info-9: #12A594;
-    --info-a10: #13FFE7AA;
-    --info-a11: #0AFFE7BE;
-    --info-a12: #E6FFF9F9;
-    --info-a1: #00000000;
-    --info-a2: #00FBD507;
-    --info-a3: #00FDDC11;
-    --info-a4: #00FDE81A;
-    --info-a5: #02FEE423;
-    --info-a6: #09FFE62F;
-    --info-a7: #11FFE341;
-    --info-a8: #11FFE75D;
-    --info-a9: #18FFE49B;
-    --primary-10: #00B1CC;
-    --primary-11: #00C2D7;
-    --primary-12: #E1F8FA;
-    --primary-1: #07191D;
-    --primary-2: #061E24;
-    --primary-3: #072830;
-    --primary-4: #07303B;
-    --primary-5: #073844;
-    --primary-6: #064150;
-    --primary-7: #045063;
-    --primary-8: #00647D;
-    --primary-9: #05A2C2;
-    --primary-a10: #00DDFFC5;
-    --primary-a11: #00E5FED2;
-    --primary-a12: #E6FDFFF9;
-    --primary-a1: #00000000;
-    --primary-a2: #00BBFF07;
-    --primary-a3: #07CBFC15;
-    --primary-a4: #07C5FF21;
-    --primary-a5: #07CDFE2C;
-    --primary-a6: #02C8FF39;
-    --primary-a7: #00CCFF4F;
-    --primary-a8: #00C8FF6C;
-    --primary-a9: #04D5FFBA;
-    --success-10: #3CB179;
-    --success-11: #4CC38A;
-    --success-12: #E5FBEB;
+    --grey-a10: #E7F3FF78;
+    --grey-a11: #EFF7FF9C;
+    --grey-a12: #FDFEFFEC;
     --success-1: #0D1912;
     --success-2: #0C1F17;
     --success-3: #0F291E;
@@ -307,9 +232,9 @@
     --success-7: #1B543A;
     --success-8: #236E4A;
     --success-9: #30A46C;
-    --success-a10: #54FFAFA8;
-    --success-a11: #62FFB3BC;
-    --success-a12: #E9FFEFF9;
+    --success-10: #3CB179;
+    --success-11: #4CC38A;
+    --success-12: #E5FBEB;
     --success-a1: #00000000;
     --success-a2: #00F7CA06;
     --success-a3: #2AFEBE11;
@@ -319,9 +244,33 @@
     --success-a7: #43FFAD41;
     --success-a8: #49FFAA5E;
     --success-a9: #47FFA69A;
-    --warning-10: #FF802B;
-    --warning-11: #FF8B3E;
-    --warning-12: #FEEADD;
+    --success-a10: #54FFAFA8;
+    --success-a11: #62FFB3BC;
+    --success-a12: #E9FFEFF9;
+    --error-1: #1D1412;
+    --error-2: #2A1410;
+    --error-3: #3B1813;
+    --error-4: #481A14;
+    --error-5: #541C15;
+    --error-6: #652016;
+    --error-7: #7F2315;
+    --error-8: #A42A12;
+    --error-9: #E54D2E;
+    --error-10: #EC5E41;
+    --error-11: #F16A50;
+    --error-12: #FEEFEC;
+    --error-a1: #00000000;
+    --error-a2: #FD15000E;
+    --error-a3: #FF301921;
+    --error-a4: #FE331C30;
+    --error-a5: #FE351E3E;
+    --error-a6: #FF391E51;
+    --error-a7: #FF37196E;
+    --error-a8: #FF3A1298;
+    --error-a9: #FF5431E1;
+    --error-a10: #FF6445E9;
+    --error-a11: #FF7054EF;
+    --error-a12: #FFF3F0F9;
     --warning-1: #1F1206;
     --warning-2: #2B1400;
     --warning-3: #391A03;
@@ -331,9 +280,9 @@
     --warning-7: #763205;
     --warning-8: #943E00;
     --warning-9: #F76808;
-    --warning-a10: #FF842CF9;
-    --warning-a11: #FF8C3FF9;
-    --warning-a12: #FFEEE1F9;
+    --warning-10: #FF802B;
+    --warning-11: #FF8B3E;
+    --warning-12: #FEEADD;
     --warning-a1: #00000000;
     --warning-a2: #FD37000D;
     --warning-a3: #FD54001D;
@@ -343,22 +292,48 @@
     --warning-a7: #FF640363;
     --warning-a8: #FE660085;
     --warning-a9: #FF6B08F6;
-    --white-10: #FFFFFF71;
-    --white-11: #FFFFFF96;
-    --white-12: #FFFFFFEB;
-    --white-1: #00000000;
-    --white-2: #FFFFFF03;
-    --white-3: #FFFFFF08;
-    --white-4: #FFFFFF0E;
-    --white-5: #FFFFFF15;
-    --white-6: #FFFFFF1F;
-    --white-7: #FFFFFF2C;
-    --white-8: #FFFFFF3F;
-    --white-9: #FFFFFF62;
-    --white-a10: #FFFFFF71;
-    --white-a11: #FFFFFF96;
-    --white-a12: #FFFFFFEB;
-    --white-a1: #00000000;
+    --warning-a10: #FF842CF9;
+    --warning-a11: #FF8C3FF9;
+    --warning-a12: #FFEEE1F9;
+    --info-1: #091915;
+    --info-2: #04201B;
+    --info-3: #062923;
+    --info-4: #07312B;
+    --info-5: #083932;
+    --info-6: #09443C;
+    --info-7: #0B544A;
+    --info-8: #0C6D62;
+    --info-9: #12A594;
+    --info-10: #10B3A3;
+    --info-11: #0AC5B3;
+    --info-12: #E1FAF4;
+    --info-a1: #00000000;
+    --info-a2: #00FBD507;
+    --info-a3: #00FDDC11;
+    --info-a4: #00FDE81A;
+    --info-a5: #02FEE423;
+    --info-a6: #09FFE62F;
+    --info-a7: #11FFE341;
+    --info-a8: #11FFE75D;
+    --info-a9: #18FFE49B;
+    --info-a10: #13FFE7AA;
+    --info-a11: #0AFFE7BE;
+    --info-a12: #E6FFF9F9;
+    --black-1: #000000;
+    --black-a1: #00000000;
+    --black-a2: #00000006;
+    --black-a3: #0000000B;
+    --black-a4: #00000012;
+    --black-a5: #00000016;
+    --black-a6: #0000001D;
+    --black-a7: #00000023;
+    --black-a8: #00000038;
+    --black-a9: #0000006F;
+    --black-a10: #00000079;
+    --black-a11: #00000090;
+    --black-a12: #000000E8;
+    --white-1: #FFFFFF;
+    --white-a1: #FFFFFF00;
     --white-a2: #FFFFFF03;
     --white-a3: #FFFFFF08;
     --white-a4: #FFFFFF0E;
@@ -367,6 +342,9 @@
     --white-a7: #FFFFFF2C;
     --white-a8: #FFFFFF3F;
     --white-a9: #FFFFFF62;
+    --white-a10: #FFFFFF71;
+    --white-a11: #FFFFFF96;
+    --white-a12: #FFFFFFEB;
   }
 }
 
