--- a/packages/example/src/theme/theme-variables.css
+++ b/packages/example/src/theme/theme-variables.css
@@ -1,5 +1,5 @@
 :root {
-  --font-ui: Monorale;
+  --font-ui: Monorale, Hiragino Sans, "ヒラギノ角ゴシック", Hiragino Kaku Gothic ProN, "ヒラギノ角ゴ ProN W3", Roboto, YuGothic, "游ゴシック", Meiryo, "メイリオ", sans-serif;
   --font-size: 14px;
 
   --button-font-size: 14px;
@@ -17,10 +17,19 @@
 
 .multi-button-primary {
   --border-color: var(--primary-9);
+  --border-active-color: var(--primary-11);
   --gradient-1: #72C3EE;
   --gradient-2: #5CACEE;
   --button-lift-default-color: rgba(221, 234, 248, 0.08);
   --text-color: var(--white-a12);
+  --text-disabled-color: var(--white-a11);
+  --button-hover-bg: var(--primary-a3);
+  --button-active-bg: var(--primary-10);
+  --toggle-icon-hover-bg: var(--white-a7);
+  --toggle-icon-active-bg:  var(--black-a6);
+  --toggle-icon: var(--white-a12);
+  --toggle-icon-active: var(--white-a11);
+  --toggle-icon-disabled: var(--white-a10);
 }
 
 .multi-button-secondary {
