Add Multi Action Button Story

--- a/packages/storybook/src/theme/theme-variables.css
+++ b/packages/storybook/src/theme/theme-variables.css
@@ -1,3 +1,92 @@
+:root {
+  --font-ui: Monorale, Hiragino Sans, "ヒラギノ角ゴシック", Hiragino Kaku Gothic ProN, "ヒラギノ角ゴ ProN W3", Roboto, YuGothic, "游ゴシック", Meiryo, "メイリオ", sans-serif;
+  --font-size: 14px;
+
+  --button-font-size: 14px;
+  --button-height: 32px;
+  --button-h-padding: 8px;
+  --button-lift-default-x: 0px;
+  --button-lift-default-y: 2px;
+  --button-lift-default-blur: 4px;
+  --button-lift-default-spread: 2px;
+
+  --button-icon-h-padding: 8px;
+  --button-icon-size: 14px;
+
+}
+
+.multi-button-primary {
+  --border-color: var(--primary-9);
+  --border-active-color: var(--primary-11);
+  --toggle-icon-border: var(--primary-9);
+  --gradient-1: #72C3EE;
+  --gradient-2: #5CACEE;
+  --button-lift-default-color: rgba(221, 234, 248, 0.08);
+  --text-color: var(--white-a12);
+  --text-disabled-color: var(--white-a11);
+  --button-hover-bg: var(--primary-a3);
+  --button-active-bg: var(--primary-10);
+  --toggle-icon-hover-bg: var(--white-a7);
+  --toggle-icon-active-bg:  var(--black-a6);
+  --toggle-icon: var(--white-a12);
+  --toggle-icon-active: var(--white-a11);
+  --toggle-icon-disabled: var(--white-a10);
+}
+
+.multi-button-secondary {
+  --border-color: var(--grey-7);
+  --border-active-color: var(--grey-7);
+  --toggle-icon-border: var(--grey-6);
+  --gradient-1: #2E3135;
+  --gradient-2: #363A3F;
+  --button-lift-default-color: rgba(221, 234, 248, 0.08);
+  --text-color: var(--grey-12);
+  --text-disabled-color: var(--grey-a11);
+  --button-hover-bg: var(--grey-a6);
+  --button-active-bg: var(--grey-a3);
+  --toggle-icon-hover-bg: var(--grey-a6);
+  --toggle-icon-active-bg:  var(--grey-a3);
+  --toggle-icon: var(--grey-12);
+  --toggle-icon-active: var(--grey-a11);
+  --toggle-icon-disabled: var(--grey-10);
+}
+
+.multi-button-danger {
+  --border-color: var(--warning-10);
+  --border-active-color: var(--warning-10);
+  --toggle-icon-border: var(--warning-9);
+  --gradient-1: #D16565;
+  --gradient-2: #E76F6F;
+  --button-lift-default-color: rgba(255, 113, 113, 0.47);
+  --text-color:  var(--white-a12);
+  --text-disabled-color: var(--white-a11);
+  --button-hover-bg: var(--warning-a7);
+  --button-active-bg: var(--warning-8);
+  --toggle-icon-hover-bg: var(--warning-a7);
+  --toggle-icon-active-bg:  var(--warning-a5);
+  --toggle-icon: var(--white-a12);
+  --toggle-icon-active: var(--white-a11);
+  --toggle-icon-disabled: var(--white-10);
+}
+
+.multi-button-custom {
+  --border-color: var(--info-10);
+  --border-active-color: var(--info-10);
+  --toggle-icon-border: var(--info-9);
+  --gradient-1: var(--info-10);
+  --gradient-2: var(--info-9);
+  --button-lift-default-color:  var(--info-a3);
+  --text-color:  var(--white-a12);
+  --text-disabled-color: var(--white-a11);
+  --button-hover-bg: var(--info-a7);
+  --button-active-bg: var(--info-8);
+  --toggle-icon-hover-bg: var(--info-a7);
+  --toggle-icon-active-bg:  var(--info-a5);
+  --toggle-icon: var(--white-a12);
+  --toggle-icon-active: var(--white-a11);
+  --toggle-icon-disabled: var(--white-10);
+}
+
 .light-theme {
   /* Light Mode */
   --primary-1: #FAFCFE;
@@ -185,6 +274,12 @@
   --primary: var(--primary-9);
   --danger: var(--error-9);
   --white: var(--white-1);
+
+  --spinner-danger: var(--error-8);
+  --spinner-secondary: var(--grey-8);
+  --spinner-primary: var(--primary-6);
+  --spinner-simple: var(--grey-a8);
+
 }
 
 .dark-theme {
@@ -373,4 +468,9 @@
   --primary: var(--primary-9);
   --danger: var(--error-9);
   --white: var(--white-1);
+
+  --spinner-danger: var(--error-8);
+  --spinner-secondary: var(--grey-8);
+  --spinner-primary: var(--primary-6);
+  --spinner-simple: var(--grey-a8);
 }
