CSS values color and Caution, Warning naming update

--- a/color_replacer_app/dictionary.css
+++ b/color_replacer_app/dictionary.css
@@ -71,54 +71,54 @@
 --success-a10: #008346D6;
 --success-a11: #006B3BE7;
 --success-a12: #002012EA;
---error-1: #FFFCFC;
---error-2: #FFF8F7;
---error-3: #FFF0EE;
---error-4: #FFE6E2;
---error-5: #FDD8D3;
---error-6: #FAC7BE;
---error-7: #F3B0A2;
---error-8: #EA9280;
---error-9: #E54D2E;
---error-10: #DB4324;
---error-11: #CA3214;
---error-12: #341711;
---error-a1: #FF050503;
---error-a2: #FF260508;
---error-a3: #FF1F0111;
---error-a4: #FF22011D;
---error-a5: #F41D012C;
---error-a6: #EC230041;
---error-a7: #DE25005D;
---error-a8: #D524017F;
---error-a9: #DF2500D1;
---error-a10: #D52400DB;
---error-a11: #C62100EB;
---error-a12: #260600EE;
---warning-1: #FEFCFB;
---warning-2: #FEF8F4;
---warning-3: #FFF1E7;
---warning-4: #FFE8D7;
---warning-5: #FFDCC3;
---warning-6: #FFCCA7;
---warning-7: #FFB381;
---warning-8: #FA934E;
---warning-9: #F76808;
---warning-10: #ED5F00;
---warning-11: #BD4B00;
---warning-12: #451E11;
---warning-a1: #C0430504;
---warning-a2: #E860050B;
---warning-a3: #FF6C0318;
---warning-a4: #FF6E0028;
---warning-a5: #FF6B013C;
---warning-a6: #FF6B0158;
---warning-a7: #FF66017E;
---warning-a8: #F86300B1;
---warning-a9: #F76300F7;
---warning-a10: #ED5B00F9;
---warning-a11: #BC4800F9;
---warning-a12: #380E00EE;
+--warning-1: #FFFCFC;
+--warning-2: #FFF8F7;
+--warning-3: #FFF0EE;
+--warning-4: #FFE6E2;
+--warning-5: #FDD8D3;
+--warning-6: #FAC7BE;
+--warning-7: #F3B0A2;
+--warning-8: #EA9280;
+--warning-9: #E54D2E;
+--warning-10: #DB4324;
+--warning-11: #CA3214;
+--warning-12: #341711;
+--warning-a1: #FF050503;
+--warning-a2: #FF260508;
+--warning-a3: #FF1F0111;
+--warning-a4: #FF22011D;
+--warning-a5: #F41D012C;
+--warning-a6: #EC230041;
+--warning-a7: #DE25005D;
+--warning-a8: #D524017F;
+--warning-a9: #DF2500D1;
+--warning-a10: #D52400DB;
+--warning-a11: #C62100EB;
+--warning-a12: #260600EE;
+--caution-1: #FEFCFB;
+--caution-2: #FEF8F4;
+--caution-3: #FFF1E7;
+--caution-4: #FFE8D7;
+--caution-5: #FFDCC3;
+--caution-6: #FFCCA7;
+--caution-7: #FFB381;
+--caution-8: #FA934E;
+--caution-9: #F76808;
+--caution-10: #ED5F00;
+--caution-11: #BD4B00;
+--caution-12: #451E11;
+--caution-a1: #C0430504;
+--caution-a2: #E860050B;
+--caution-a3: #FF6C0318;
+--caution-a4: #FF6E0028;
+--caution-a5: #FF6B013C;
+--caution-a6: #FF6B0158;
+--caution-a7: #FF66017E;
+--caution-a8: #F86300B1;
+--caution-a9: #F76300F7;
+--caution-a10: #ED5B00F9;
+--caution-a11: #BC4800F9;
+--caution-a12: #380E00EE;
 --info-1: #FAFEFD;
 --info-2: #F1FCFA;
 --info-3: #E7F9F5;
