--- a/packages/example/src/theme/theme-variables.css
+++ b/packages/example/src/theme/theme-variables.css
@@ -1,5 +1,7 @@
 :root {
   --font-ui: Monorale, Hiragino Sans, "ヒラギノ角ゴシック", Hiragino Kaku Gothic ProN, "ヒラギノ角ゴ ProN W3", Roboto, YuGothic, "游ゴシック", Meiryo, "メイリオ", sans-serif;
+  --font-data: Lato, Hiragino Sans, "ヒラギノ角ゴシック", Hiragino Kaku Gothic ProN, "ヒラギノ角ゴ ProN W3", Roboto, YuGothic, "游ゴシック", Meiryo, "メイリオ", sans-serif;
+
   --font-size: 14px;
 
   --button-font-size: 14px;
@@ -12,6 +14,8 @@
 
   --button-icon-size: 14px;
   --button-icon-h-padding: 8px;
+
+  --input-height: 40px;
 }
 
 .button-small {
@@ -368,6 +372,13 @@
   --spinner-primary: var(--primary-6);
   --spinner-simple: var(--grey-a8);
 
+  --input-border-default: var(--grey-7);
+  --input-border-default-focused: var(--primary-7);
+  --input-border-disabled: var(--grey-7);
+  --input-border-valid: var(--success-7);
+  --input-border-invalid: var(--warning-8);
+  --input-border-processing: var(--primary-7);
+
 }
 
 .dark-theme {
@@ -636,4 +647,11 @@
   --spinner-secondary: var(--grey-8);
   --spinner-primary: var(--primary-6);
   --spinner-simple: var(--grey-a8);
+
+  --input-border-default: var(--grey-7);
+  --input-border-default-focused: var(--primary-7);
+  --input-border-disabled: var(--grey-7);
+  --input-border-valid: var(--success-7);
+  --input-border-invalid: var(--warning-8);
+  --input-border-processing: var(--primary-7);
 }
